# MyData

./: .gitignore  .gitleaks.toml  README.md  README_START.md
services/api/: .env.example  pyproject.toml  pyrightconfig.json  pytest.ini
services/api/alembic/: env.py
services/api/app/: main.py  main_foundation_canary.py  main_operational_canary.py  router.py
services/api/docs/: ai_contract_v1.md  ai_plane_decomposition_contract_v1.md  ai_retrieval_contract_v1.md  device_policy_v1_backend_handover.md  eidon_drafting_contract_v1.md  eidon_template_learning_contract_v1.md  env_policy.md  launcher_canary_smoke.md  module_factory_contract_v1.md  module_factory_coverage_v1.md  partners_module_blueprint_v1.md  partners_v1_backend_handover.md  support_plane_decomposition_contract_v1.md
services/api/scripts/: api-quick.ps1  authz_fast_path_reconcile.py  bug_finder.py  db-upgrade.ps1  dev-stack-health.ps1  guard_bot_worker.py  prod_gate.py  qa_fib_pipeline.py  qa_migrations_smoke.py  qa_mixed_load.py  qa_negative_pack.py  qa_payments_e2e.py  qa_staged_load.py  qa_stress.py  run-dev.ps1  run-foundation-canary.ps1  run-operational-canary.ps1  run-tests.ps1  secret_guard.py  security_key_rotation_worker.py  smoke-canary-openapi.ps1  start-dev-stack.ps1  stop-dev-stack.ps1  storage_retention_worker.py  tenant_guard_agent.py
services/api/tests/: conftest.py  test_active_user_enforcement_coverage.py  test_ai_capability_exposure_contract.py  test_ai_capability_registry_contract.py  test_ai_document_understanding_api.py  test_ai_order_document_intake.py  test_bug_finder.py  (+93 more)
(+312 files in other folders)
